fix blurred background index.html

--- a/ePi-Project/Kidy/HTML/source/scss/theme-default/_header.scss
+++ b/ePi-Project/Kidy/HTML/source/scss/theme-default/_header.scss
@@ -18,7 +18,6 @@
     &__related-links {
         @include clearfix();
         @include font-size(18, 35);
-        display: none;
         @include breakpoint(sm) {
             display: block;
             float: right;
@@ -26,7 +25,7 @@
         }
         li {
             float: left;
-            margin-right: 45px;
+            margin-left: 30px;
             text-transform: uppercase;
             a {
                 .cover & {
@@ -41,8 +40,28 @@
             margin-right: 8px;
         }
     }
+    &__related-addition {
+        @include font-size(16, 30);
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 100%;
+        text-align: right;
+        padding: 10px 20px;
+        border-radius: 5px;
+        background: rgba(0, 0, 0, 0.9);
+        z-index: 10;
+        @include breakpoint(sm) {
+            width: initial;
+        }
+        li {
+            display: block;
+            float: none;
+            margin-left: 0;
+        }
+    }
     &__btn-group {
-        float: right;
+        float: right !important;
         @include breakpoint(sm) {}
         .btn {
             width: 35px;
@@ -71,6 +90,9 @@
                 min-width: 15px;
                 min-height: 15px;
             }
+        }
+        .btn-info {
+            @include button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
         }
     }
     &__quick-search {
@@ -113,13 +135,60 @@
             top: 0;
         }
     }
+    @include Element(slogan) {
+        color: white;
+        position: relative;
+        h2 {
+            font-size: 24px;
+            line-height: 1.5em;
+            @include breakpoint(md) {
+                font-size: 32px;
+            }
+        }
+        small {
+            display: inline-block;
+            color: white;
+            line-height: 1em;
+            margin-top: 10px;
+            font-size: 18px;
+            @include breakpoint(md) {
+                font-size: 20px;
+                margin-top: 0;
+            }
+        }
+        .cta-group {
+            margin-top: 20px;
+            @include breakpoint(xs) {
+                text-align: center;
+            }
+            @include breakpoint(md) {
+                text-align: left;
+                margin-top: 0;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+            }
+        }
+        .btn-border {
+            min-width: 130px;
+            margin-right: 15px;
+            color: white;
+            border-color: white;
+            @include haf() {
+                background-color: $brand-primary;
+                border-color: $brand-primary;
+            }
+        }
+    }
 }
 
 .cover {
-    background: url(../img/header-bg.png) center top no-repeat;
-    // background-size: 1440px 522px;
+    // background: url(../img/header-bg.png) center top no-repeat;
+    background-image: url(../img/header-bg.png);
+    background-repeat: no-repeat;
     background-size: cover;
-    @include breakpoint(xs) {
-        background-size: cover;
+    background-attachment: fixed;
+    @include breakpoint(md) {
+        padding-bottom: 60px;
     }
 }
